[project]
name = "PlayMemories_datetime"
version = "0.1.0"
description = "Convert (German) Sony Playmemories folders to sensible format."
readme = "README.md"
authors = [
  {name = "Kevin Glueck", email = "glueckkev@gmail.com"}
]
maintainers = [
  {name = "Kevin Glueck", email = "glueckkev@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "argparse>=1.4.0",
  "ipython>=8.37.0",
  "jupyter>=1.1.1",
  "typer",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/kevglu/PlayMemories_datetime/issues"
changelog = "https://github.com/kevglu/PlayMemories_datetime/blob/master/changelog.md"
homepage = "https://github.com/kevglu/PlayMemories_datetime"

[project.scripts]
pm_dt = "main_pm_dt:main"

[tool.setuptools]
package-dir = {"" = "PlayMemories_datetime"}

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
